--- a/docs/90-api/mat3.mdx
+++ b/docs/90-api/mat3.mdx
@@ -33,6 +33,8 @@ id: Mat3
 
 ### Mat3(Mat4) {#Mat3-Mat4}
 
+### Mat3(Quat) {#Mat3-Quat}
+
 ## List of Metamethods
 
 ### Vec3 __index(Mat3, int) {#Vec3-index-Mat3-int}
