--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -7,7 +7,7 @@ id: Material
 
 ## List of Constructors
 
-### Material(string, FilePath) {#Material-string-FilePath}
+### Material(string) {#Material-string}
 
 ## List of Methods
 
