--- a/docs/90-api/meshDataBuilder.mdx
+++ b/docs/90-api/meshDataBuilder.mdx
@@ -30,10 +30,13 @@ id: MeshDataBuilder
 ## List of Properties
 
 ### bool static {#bool-static}
+Hint for opengl/vulkan about how often you change the geometry (static = once, dynamic=more often, streamed = each frame)
 
 ### bool dynamic {#bool-dynamic}
+Hint for opengl/vulkan about how often you change the geometry (static = once, dynamic=more often, streamed = each frame)
 
 ### bool streamed {#bool-streamed}
+Hint for opengl/vulkan about how often you change the geometry (static = once, dynamic=more often, streamed = each frame)
 
 ### PrimitiveTopology topology {#PrimitiveTopology-topology}
 
