--- a/docs/90-api/meshRender.mdx
+++ b/docs/90-api/meshRender.mdx
@@ -11,7 +11,7 @@ id: MeshRender
 
 ## List of Properties
 
-### userdata material {#userdata-material}
+### Material material {#Material-material}
 
 ### string type {#string-type}
 
