--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -53,6 +53,8 @@ id: Scene
 
 ### VoxelDB GetVoxelDB(string) {#VoxelDB-GetVoxelDB-string}
 
+### table TraceRay(table) {#table-TraceRay-table}
+
 ## List of Properties
 
 ### LightingUpdate lighting {#LightingUpdate-lighting}
