--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -11,7 +11,11 @@ This class is only available on server
 
 ### table GetClients() {#table-GetClients}
 
+### nil DisconnectClient(int) {#nil-DisconnectClient-int}
+
 ### int GetScriptsVersion() {#int-GetScriptsVersion}
+
+### string GetScript(string) {#string-GetScript-string}
 
 ### nil LuaReset() {#nil-LuaReset}
 
@@ -31,6 +35,10 @@ This class is only available on server
 
 ### bool DevMode() {#bool-DevMode}
 
+### string GetSystemConsole() {#string-GetSystemConsole}
+
+### string GetSystemOutput() {#string-GetSystemOutput}
+
 ### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
 
 ### nil ScrollToLastestLuaLog() {#nil-ScrollToLastestLuaLog}
@@ -42,4 +50,6 @@ This class is only available on server
 ### AssetManager GetResourceManUI() {#AssetManager-GetResourceManUI}
 
 ### AssetManager GetResourceManSettings() {#AssetManager-GetResourceManSettings}
+
+### double GetLogTime(string) {#double-GetLogTime-string}
 
