--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -135,23 +135,21 @@ id: Vec2
 
 ### Vec2 GetFloored(Vec2) {#Vec2-GetFloored-Vec2}
 
-### nil Round() {#nil-Round}
+### nil Round(Vec2) {#nil-Round-Vec2}
 
 ### Vec2 GetRounded(Vec2) {#Vec2-GetRounded-Vec2}
 
 ### float DistanceTo(Vec2) {#float-DistanceTo-Vec2}
 
-### Angle GetAngle() {#Angle-GetAngle}
+### float GetAngle(Vec2) {#float-GetAngle-Vec2}
 
-### float GetAngleRad() {#float-GetAngleRad}
+### nil Rotate(Vec2, float) {#nil-Rotate-Vec2-float}
 
-### nil Rotate(float) {#nil-Rotate-float}
+### Vec2 GetRotated(Vec2, float) {#Vec2-GetRotated-Vec2-float}
 
-### nil Rotate(Angle) {#nil-Rotate-Angle}
+### string __tostring(Vec2) {#string-tostring-Vec2}
 
-### Vec2 GetRotated(float) {#Vec2-GetRotated-float}
-
-### Vec2 GetRotated(Angle) {#Vec2-GetRotated-Angle}
+### const char __name(Vec2) {#const-char-name-Vec2}
 
 ## List of Properties
 
