--- a/docs/90-api/vec2i.mdx
+++ b/docs/90-api/vec2i.mdx
@@ -147,6 +147,10 @@ id: Vec2i
 
 ### Vec2i __shr(Vec2i, int) {#Vec2i-shr-Vec2i-int}
 
+### string __tostring(Vec2i) {#string-tostring-Vec2i}
+
+### const char __name(Vec2i) {#const-char-name-Vec2i}
+
 ## List of Properties
 
 ### int x {#int-x}
