--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -181,6 +181,10 @@ This action is dangerous
 
 ### Vec3 Cross(Vec3, Vec3i) {#Vec3-Cross-Vec3-Vec3i}
 
+### string __tostring(Vec3) {#string-tostring-Vec3}
+
+### const char __name(Vec3) {#const-char-name-Vec3}
+
 ## List of Properties
 
 ### float x {#float-x}
