--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -167,6 +167,10 @@ id: Vec3i
 
 ### Vec3i __shr(Vec3i, int) {#Vec3i-shr-Vec3i-int}
 
+### string __tostring(Vec3i) {#string-tostring-Vec3i}
+
+### const char __name(Vec3i) {#const-char-name-Vec3i}
+
 ## List of Properties
 
 ### int x {#int-x}
