--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -229,6 +229,10 @@ id: Vec4
 
 ### float DistanceTo(Vec4) {#float-DistanceTo-Vec4}
 
+### string __tostring(Vec4) {#string-tostring-Vec4}
+
+### const char __name(Vec4) {#const-char-name-Vec4}
+
 ## List of Properties
 
 ### float x {#float-x}
