--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -13,6 +13,10 @@ id: VoxelData
 
 ### string resource {#string-resource}
 
+### VoxelDataResource voxelData {#VoxelDataResource-voxelData}
+
+### bool copyOnWrite {#bool-copyOnWrite}
+
 ### string type {#string-type}
 
 ### Object object {#Object-object}
