--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -18,6 +18,8 @@ id: VoxelRender
 ### bool sync {#bool-sync}
 
 ### bool enabled {#bool-enabled}
+if Enabled is switched off on server, then the object becomes invisible on all clients, or it's not streamed to clients.
+each client can enable/disable rendering of VRC locally
 
-### bool selected {#bool-selected}
+### bool outline {#bool-outline}
 
