GenDocs: fix missing header

--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -221,6 +221,8 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil CopyToClipboard(string) {#nil-CopyToClipboard-string}
 
+## List of Metamethods
+
 ### const char __tostring() {#const-char-tostring}
 
 ## List of Properties
