--- a/docs/90-api/transform.mdx
+++ b/docs/90-api/transform.mdx
@@ -25,6 +25,8 @@ id: Transform
 
 ### Vec3 WorldToLocalVec(Vec3) {#Vec3-WorldToLocalVec-Vec3}
 
+## List of Metamethods
+
 ### bool __eq(Transform, Transform) {#bool-eq-Transform-Transform}
 
 ## List of Properties
