Remove "list of" from headers

--- a/docs/90-api/assetManager.mdx
+++ b/docs/90-api/assetManager.mdx
@@ -5,7 +5,7 @@ id: AssetManager
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### userdata GetAssets(AssetManager) {#userdata-GetAssets-AssetManager}
 
