--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -5,7 +5,7 @@ id: Camera
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### Transformation GetTransformation(Object3D) {#Transformation-GetTransformation-Object3D}
 
@@ -67,7 +67,7 @@ id: Camera
 
 ### float GetFovY() {#float-GetFovY}
 
-## List of Properties
+## Properties
 
 ### Transformation transformation {#Transformation-transformation}
 
