--- a/docs/90-api/cameraComponent.mdx
+++ b/docs/90-api/cameraComponent.mdx
@@ -5,7 +5,7 @@ id: CameraComponent
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### Vec3 ScreenToWorldRay(Vec2) {#Vec3-ScreenToWorldRay-Vec2}
 
@@ -13,7 +13,7 @@ id: CameraComponent
 
 ### Vec3 WorldToScreen3f(Vec3) {#Vec3-WorldToScreen3f-Vec3}
 
-## List of Properties
+## Properties
 
 ### string type {#string-type}
 
