--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -12,7 +12,7 @@ blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal
 
 blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab
 
-## List of Methods
+## Methods
 
 ### int GetID() {#int-GetID}
 
@@ -221,11 +221,11 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil CopyToClipboard(string) {#nil-CopyToClipboard-string}
 
-## List of Metamethods
+## Metamethods
 
 ### const char __tostring() {#const-char-tostring}
 
-## List of Properties
+## Properties
 
 ### string platform {#string-platform}
 
