--- a/docs/90-api/collision.mdx
+++ b/docs/90-api/collision.mdx
@@ -5,13 +5,13 @@ id: Collision
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Collision() {#Collision}
 
 ### Collision() {#Collision}
 
-## List of Methods
+## Methods
 
 ### table Raycast() {#table-Raycast}
 
@@ -19,7 +19,7 @@ id: Collision
 
 ### bool Check() {#bool-Check}
 
-## List of Properties
+## Properties
 
 ### Filter filter {#Filter-filter}
 
