--- a/docs/90-api/component.mdx
+++ b/docs/90-api/component.mdx
@@ -7,7 +7,7 @@ id: Component
 
 See also: [ScriptComponent](ScriptComponent)
 
-## List of Properties
+## Properties
 
 ### string type {#string-type}
 
