--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -5,11 +5,11 @@ id: Filter
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Filter() {#Filter}
 
-## List of Properties
+## Properties
 
 ### bool useCommon {#bool-useCommon}
 
