--- a/docs/90-api/frustum.mdx
+++ b/docs/90-api/frustum.mdx
@@ -5,11 +5,11 @@ id: Frustum
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Frustum() {#Frustum}
 
-## List of Properties
+## Properties
 
 ### float nearPlane {#float-nearPlane}
 
