--- a/docs/90-api/mat3.mdx
+++ b/docs/90-api/mat3.mdx
@@ -5,7 +5,7 @@ id: Mat3
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Mat3() {#Mat3}
 
@@ -35,7 +35,7 @@ id: Mat3
 
 ### Mat3(Quat) {#Mat3-Quat}
 
-## List of Metamethods
+## Metamethods
 
 ### Vec3 __index(Mat3, int) {#Vec3-index-Mat3-int}
 
@@ -73,7 +73,7 @@ id: Mat3
 
 ### bool __eq(Mat3, Mat3) {#bool-eq-Mat3-Mat3}
 
-## List of Methods
+## Methods
 
 ### float GetDeterminant() {#float-GetDeterminant}
 
@@ -93,7 +93,7 @@ id: Mat3
 
 ### bool IsAnyNaN() {#bool-IsAnyNaN}
 
-## List of Properties
+## Properties
 
 ### Vec3 xaxis {#Vec3-xaxis}
 
