--- a/docs/90-api/mat4.mdx
+++ b/docs/90-api/mat4.mdx
@@ -5,7 +5,7 @@ id: Mat4
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Mat4() {#Mat4}
 
@@ -51,7 +51,7 @@ id: Mat4
 
 ### Mat4(Quat) {#Mat4-Quat}
 
-## List of Metamethods
+## Metamethods
 
 ### Vec4 __index(Mat4, int) {#Vec4-index-Mat4-int}
 
@@ -89,7 +89,7 @@ id: Mat4
 
 ### bool __eq(Mat4, Mat4) {#bool-eq-Mat4-Mat4}
 
-## List of Methods
+## Methods
 
 ### float GetDeterminant() {#float-GetDeterminant}
 
@@ -131,7 +131,7 @@ id: Mat4
 
 ### Mat4 Ortho(float, float, float, float, float, float) {#Mat4-Ortho-float-float-float-float-float-float}
 
-## List of Properties
+## Properties
 
 ### Vec3 xaxis {#Vec3-xaxis}
 
