--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -5,11 +5,11 @@ id: Material
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Material(string) {#Material-string}
 
-## List of Methods
+## Methods
 
 ### bool IsValid() {#bool-IsValid}
 
