--- a/docs/90-api/meshData.mdx
+++ b/docs/90-api/meshData.mdx
@@ -5,11 +5,11 @@ id: MeshData
 `Client`
 `Server`
 
-## List of Metamethods
+## Metamethods
 
 ### bool __eq(MeshData, MeshData) {#bool-eq-MeshData-MeshData}
 
-## List of Properties
+## Properties
 
 ### string file {#string-file}
 
