--- a/docs/90-api/meshDataBuilder.mdx
+++ b/docs/90-api/meshDataBuilder.mdx
@@ -5,11 +5,11 @@ id: MeshDataBuilder
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### MeshDataBuilder() {#MeshDataBuilder}
 
-## List of Methods
+## Methods
 
 ### nil Clear() {#nil-Clear}
 
@@ -27,7 +27,7 @@ id: MeshDataBuilder
 
 ### nil AddIndex(int, int) {#nil-AddIndex-int-int}
 
-## List of Properties
+## Properties
 
 ### bool static {#bool-static}
 Hint for opengl/vulkan about how often you change the geometry (static = once, dynamic=more often, streamed = each frame)
