--- a/docs/90-api/meshRender.mdx
+++ b/docs/90-api/meshRender.mdx
@@ -5,11 +5,11 @@ id: MeshRender
 `Client`
 `Server`
 
-## List of Metamethods
+## Metamethods
 
 ### bool __eq(MeshRender, MeshRender) {#bool-eq-MeshRender-MeshRender}
 
-## List of Properties
+## Properties
 
 ### Material material {#Material-material}
 
