--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -5,7 +5,7 @@ id: Object
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### nil RemoveAllNonNativeComponents() {#nil-RemoveAllNonNativeComponents}
 
@@ -25,7 +25,7 @@ id: Object
 
 ### ScriptComponent FindScriptComponentByName(string) {#ScriptComponent-FindScriptComponentByName-string}
 
-## List of Properties
+## Properties
 
 ### string name {#string-name}
 
