--- a/docs/90-api/quat.mdx
+++ b/docs/90-api/quat.mdx
@@ -5,7 +5,7 @@ id: Quat
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Quat() {#Quat}
 
@@ -19,7 +19,7 @@ id: Quat
 
 ### Quat(Mat4) {#Quat-Mat4}
 
-## List of Metamethods
+## Metamethods
 
 ### float __index(Quat, int) {#float-index-Quat-int}
 
@@ -47,7 +47,7 @@ id: Quat
 
 ### bool __eq(Quat, Quat) {#bool-eq-Quat-Quat}
 
-## List of Methods
+## Methods
 
 ### float Len() {#float-Len}
 
@@ -103,7 +103,7 @@ id: Quat
 
 ### const char __name(Quat) {#const-char-name-Quat}
 
-## List of Properties
+## Properties
 
 ### float x {#float-x}
 
