--- a/docs/90-api/rotation.mdx
+++ b/docs/90-api/rotation.mdx
@@ -5,13 +5,13 @@ id: Rotation
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Rotation() {#Rotation}
 
 ### Rotation(Vec3) {#Rotation-Vec3}
 
-## List of Properties
+## Properties
 
 ### Vec3 angles {#Vec3-angles}
 
