--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -5,7 +5,7 @@ id: Scene
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### double GetTime() {#double-GetTime}
 
@@ -55,7 +55,7 @@ id: Scene
 
 ### table TraceRay(table) {#table-TraceRay-table}
 
-## List of Properties
+## Properties
 
 ### LightingUpdate lighting {#LightingUpdate-lighting}
 
