--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -62,7 +62,7 @@ sc.instance = {
 end
 ```
 
-## List of Methods
+## Methods
 
 ### bool GetSyncToClient() {#bool-GetSyncToClient}
 
@@ -72,7 +72,7 @@ end
 
 ### nil RPC(...) {#nil-RPC}
 
-## List of Properties
+## Properties
 
 ### string type {#string-type}
 
