--- a/docs/90-api/scriptInstance.mdx
+++ b/docs/90-api/scriptInstance.mdx
@@ -5,7 +5,7 @@ id: ScriptInstance
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### nil Start() {#nil-Start}
 
@@ -19,7 +19,7 @@ id: ScriptInstance
 
 ### nil RPC(int, string, ...) {#nil-RPC-int-string}
 
-## List of Properties
+## Properties
 
 ### ScriptComponent component {#ScriptComponent-component}
 
