--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -7,7 +7,7 @@ id: Server
 This class is only available on server
 :::
 
-## List of Methods
+## Methods
 
 ### table GetClients() {#table-GetClients}
 
