--- a/docs/90-api/transform.mdx
+++ b/docs/90-api/transform.mdx
@@ -5,7 +5,7 @@ id: Transform
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### userdata GetChild(int) {#userdata-GetChild-int}
 
@@ -25,11 +25,11 @@ id: Transform
 
 ### Vec3 WorldToLocalVec(Vec3) {#Vec3-WorldToLocalVec-Vec3}
 
-## List of Metamethods
+## Metamethods
 
 ### bool __eq(Transform, Transform) {#bool-eq-Transform-Transform}
 
-## List of Properties
+## Properties
 
 ### int childCount {#int-childCount}
 
