--- a/docs/90-api/transformation.mdx
+++ b/docs/90-api/transformation.mdx
@@ -5,13 +5,13 @@ id: Transformation
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Transformation() {#Transformation}
 
 ### Transformation(Rotation, Vec3) {#Transformation-Rotation-Vec3}
 
-## List of Properties
+## Properties
 
 ### Vec3 position {#Vec3-position}
 
