--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -5,7 +5,7 @@ id: Vec2
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Vec2() {#Vec2}
 
@@ -33,7 +33,7 @@ id: Vec2
 
 ### Vec2(Vec4i) {#Vec2-Vec4i}
 
-## List of Metamethods
+## Metamethods
 
 ### float __index(Vec2, int) {#float-index-Vec2-int}
 
@@ -93,7 +93,7 @@ id: Vec2
 
 ### bool __eq(Vec2, Vec2i) {#bool-eq-Vec2-Vec2i}
 
-## List of Methods
+## Methods
 
 ### float Len() {#float-Len}
 
@@ -151,7 +151,7 @@ id: Vec2
 
 ### const char __name(Vec2) {#const-char-name-Vec2}
 
-## List of Properties
+## Properties
 
 ### float x {#float-x}
 
