--- a/docs/90-api/vec2i.mdx
+++ b/docs/90-api/vec2i.mdx
@@ -5,7 +5,7 @@ id: Vec2i
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Vec2i() {#Vec2i}
 
@@ -33,7 +33,7 @@ id: Vec2i
 
 ### Vec2i(Vec4) {#Vec2i-Vec4}
 
-## List of Metamethods
+## Metamethods
 
 ### int __index(Vec2i, int) {#int-index-Vec2i-int}
 
@@ -93,7 +93,7 @@ id: Vec2i
 
 ### bool __eq(Vec2i, Vec2) {#bool-eq-Vec2i-Vec2}
 
-## List of Methods
+## Methods
 
 ### int Len() {#int-Len}
 
@@ -151,7 +151,7 @@ id: Vec2i
 
 ### const char __name(Vec2i) {#const-char-name-Vec2i}
 
-## List of Properties
+## Properties
 
 ### int x {#int-x}
 
