--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -21,7 +21,7 @@ This action is dangerous
 
 :::
 
-## List of Constructors
+## Constructors
 
 ### Vec3() {#Vec3}
 
@@ -69,7 +69,7 @@ This action is dangerous
 
 ### Vec3(Vec4i) {#Vec3-Vec4i}
 
-## List of Metamethods
+## Metamethods
 
 ### float __index(Vec3, int) {#float-index-Vec3-int}
 
@@ -129,7 +129,7 @@ This action is dangerous
 
 ### bool __eq(Vec3, Vec3i) {#bool-eq-Vec3-Vec3i}
 
-## List of Methods
+## Methods
 
 ### float Len() {#float-Len}
 
@@ -185,7 +185,7 @@ This action is dangerous
 
 ### const char __name(Vec3) {#const-char-name-Vec3}
 
-## List of Properties
+## Properties
 
 ### float x {#float-x}
 
