--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -5,7 +5,7 @@ id: Vec3i
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Vec3i() {#Vec3i}
 
@@ -53,7 +53,7 @@ id: Vec3i
 
 ### Vec3i(Vec4) {#Vec3i-Vec4}
 
-## List of Metamethods
+## Metamethods
 
 ### int __index(Vec3i, int) {#int-index-Vec3i-int}
 
@@ -113,7 +113,7 @@ id: Vec3i
 
 ### bool __eq(Vec3i, Vec3) {#bool-eq-Vec3i-Vec3}
 
-## List of Methods
+## Methods
 
 ### int Len() {#int-Len}
 
@@ -171,7 +171,7 @@ id: Vec3i
 
 ### const char __name(Vec3i) {#const-char-name-Vec3i}
 
-## List of Properties
+## Properties
 
 ### int x {#int-x}
 
