--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -5,7 +5,7 @@ id: Vec4
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Vec4() {#Vec4}
 
@@ -121,7 +121,7 @@ id: Vec4
 
 ### Vec4(Vec4i) {#Vec4-Vec4i}
 
-## List of Metamethods
+## Metamethods
 
 ### float __index(Vec4, int) {#float-index-Vec4-int}
 
@@ -181,7 +181,7 @@ id: Vec4
 
 ### bool __eq(Vec4, Vec4i) {#bool-eq-Vec4-Vec4i}
 
-## List of Methods
+## Methods
 
 ### float Len() {#float-Len}
 
@@ -233,7 +233,7 @@ id: Vec4
 
 ### const char __name(Vec4) {#const-char-name-Vec4}
 
-## List of Properties
+## Properties
 
 ### float x {#float-x}
 
