--- a/docs/90-api/vec4i.mdx
+++ b/docs/90-api/vec4i.mdx
@@ -5,7 +5,7 @@ id: Vec4i
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### Vec4i() {#Vec4i}
 
@@ -121,7 +121,7 @@ id: Vec4i
 
 ### Vec4i(Vec4) {#Vec4i-Vec4}
 
-## List of Metamethods
+## Metamethods
 
 ### int __index(Vec4i, int) {#int-index-Vec4i-int}
 
@@ -181,7 +181,7 @@ id: Vec4i
 
 ### bool __eq(Vec4i, Vec4) {#bool-eq-Vec4i-Vec4}
 
-## List of Methods
+## Methods
 
 ### int Len() {#int-Len}
 
@@ -235,7 +235,7 @@ id: Vec4i
 
 ### Vec4i __shr(Vec4i, int) {#Vec4i-shr-Vec4i-int}
 
-## List of Properties
+## Properties
 
 ### int x {#int-x}
 
