--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -5,7 +5,7 @@ id: VoxelDB
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### nil Clear() {#nil-Clear}
 
@@ -171,7 +171,7 @@ id: VoxelDB
 
 ### Vec3 GetCenter() {#Vec3-GetCenter}
 
-## List of Properties
+## Properties
 
 ### bool autoLightingUpdate {#bool-autoLightingUpdate}
 
