--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -5,11 +5,11 @@ id: VoxelData
 `Client`
 `Server`
 
-## List of Metamethods
+## Metamethods
 
 ### bool __eq(VoxelData, VoxelData) {#bool-eq-VoxelData-VoxelData}
 
-## List of Properties
+## Properties
 
 ### string resource {#string-resource}
 
