--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -5,11 +5,11 @@ id: VoxelDataResource
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### string Save(string, bool) {#string-Save-string-bool}
 
-## List of Properties
+## Properties
 
 ### bool isEditable {#bool-isEditable}
 
