--- a/docs/90-api/voxelEdit.mdx
+++ b/docs/90-api/voxelEdit.mdx
@@ -5,11 +5,11 @@ id: VoxelEdit
 `Client`
 `Server`
 
-## List of Constructors
+## Constructors
 
 ### VoxelEdit() {#VoxelEdit}
 
-## List of Methods
+## Methods
 
 ### nil Paint() {#nil-Paint}
 
@@ -17,7 +17,7 @@ id: VoxelEdit
 
 ### nil Erase() {#nil-Erase}
 
-## List of Properties
+## Properties
 
 ### bool blendEnable {#bool-blendEnable}
 
