--- a/docs/90-api/voxelInspectComponent.mdx
+++ b/docs/90-api/voxelInspectComponent.mdx
@@ -5,7 +5,7 @@ id: VoxelInspectComponent
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### nil AddVoxelInfo(float, userdata, string, userdata, Mat4, bool, int) {#nil-AddVoxelInfo-float-userdata-string-userdata-Mat4-bool-int}
 
@@ -13,7 +13,7 @@ id: VoxelInspectComponent
 
 ### nil SetLineColor(Vec4) {#nil-SetLineColor-Vec4}
 
-## List of Properties
+## Properties
 
 ### string type {#string-type}
 
