--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -5,11 +5,11 @@ id: VoxelRender
 `Client`
 `Server`
 
-## List of Metamethods
+## Metamethods
 
 ### bool __eq(VoxelRender, VoxelRender) {#bool-eq-VoxelRender-VoxelRender}
 
-## List of Properties
+## Properties
 
 ### string type {#string-type}
 
