--- a/docs/90-api/lightingUpdate.mdx
+++ b/docs/90-api/lightingUpdate.mdx
@@ -5,7 +5,7 @@ id: LightingUpdate
 `Client`
 `Server`
 
-## List of Properties
+## Properties
 
 ### RealtimeLightingInfo realtimeLighting {#RealtimeLightingInfo-realtimeLighting}
 
