--- a/docs/90-api/object3D.mdx
+++ b/docs/90-api/object3D.mdx
@@ -5,7 +5,7 @@ id: Object3D
 `Client`
 `Server`
 
-## List of Methods
+## Methods
 
 ### Transformation GetTransformation(Object3D) {#Transformation-GetTransformation-Object3D}
 
@@ -31,7 +31,7 @@ id: Object3D
 
 ### nil SetPosition(Vec3) {#nil-SetPosition-Vec3}
 
-## List of Properties
+## Properties
 
 ### Transformation transformation {#Transformation-transformation}
 
