--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -18,6 +18,7 @@ id: Filter
 ### bool useTmp {#bool-useTmp}
 
 ### table ignoreList {#table-ignoreList}
+contains objects
 
 ### table forceList {#table-forceList}
-
+contains objects
