--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -12,10 +12,13 @@ id: VoxelData
 ## Properties
 
 ### string resource {#string-resource}
+resource file name
 
 ### VoxelDataResource voxelData {#VoxelDataResource-voxelData}
+shared voxel data
 
 ### bool copyOnWrite {#bool-copyOnWrite}
+make local copy of voxel data resource if edited 
 
 ### string type {#string-type}
 
