--- a/docs/30-editor-basics.mdx
+++ b/docs/30-editor-basics.mdx
@@ -8,12 +8,13 @@ Press hierachy server in the top bar or `Ctrl + H` to open the hierachy.
  * Right click drag any voxel data onto the file field
  * Tick `Sync to clients`
  * If you do not see the object, make sure it is not positioned inside terrain. Set the Y part of the position to 15 or so
-![Hierachy](/img/editor-basics/hierachy1.png)
-This object can also be edited with the brush tools.
 
-You can now move the object with the gizmos.
+![Hierachy](/img/editor-basics/hierachy1.png)
+
+This object can also be edited with the brush tools.
+You can now move the object with the gizmos. You can select any object in the hierachy to move it. Duplicate a selected object with `Ctrl + D`. Press `Ctrl + F` for a list of other available shortcuts.
+
 ![Hierachy](/img/editor-basics/gizmo.png)
-You can select any object in the hierachy to move it. You can duplicate a selected object with `Ctrl + D`
 
 ## Resetting
 If anything goes wrong you can reset the editor with `Ctrl + R`
