Add info about saving

--- a/docs/20-editor-basics.mdx
+++ b/docs/20-editor-basics.mdx
@@ -8,6 +8,7 @@ Press hierachy server in the top bar or `Ctrl + H` to open the hierachy.
  * Right click drag any voxel data onto the file field
  * Tick `Sync to clients`
  * If you do not see the object, make sure it is not positioned inside terrain. Set the Y part of the position to 15 or so
+ * After your changes press `Save` in the top of the hierachy window
 
 ![Hierachy](/img/editor-basics/hierachy1.png)
 
