--- a/docs/20-editor-basics.mdx
+++ b/docs/20-editor-basics.mdx
@@ -2,17 +2,20 @@
 
 ## Camera Controls
 The camera has two modes `Fly` and `Orbit`. 
-Fly Mode allows for free control of the camera. 
-Orbit Mode focuses and rotates the camera around one point. 
+`Fly Mode` allows for free control of the camera. 
+`Orbit Mode` focuses and rotates the camera around one point. 
+
 Use the mouse buttons, mouse wheel and `WASD` to control the camera. Press `Shift` to move faster. 
 The tools panel has a `Reset Position` button to reset the camera.
 
 ## Editing Voxels
 Edit voxels with the tools in the `Brush` section of the tools panel in the top left. 
-The `Paint` brush has various blend modes which you may know from Photoshop. See a list of explanations ![here](https://photoshoptrainingchannel.com/blending-modes-explained/#normal-blending-modes).
-![Panel](/img/editor-basics/leftPanel.png)
+The `Paint` brush has various blend modes which you may know from Photoshop. See a list of explanations [here](https://photoshoptrainingchannel.com/blending-modes-explained/#normal-blending-modes).
+
+![Panel](/img/editor-basics/panelBrush.png)
 
 Save voxels edits of the terrain by pressing `Save Voxel Data` in the dev menu on the right.
+
 ![Save](/img/editor-basics/saveVoxels.png)
 
 ## Adding Objects to the Hierachy
