Clean up some other files

--- a/docs/20-editor-basics.mdx
+++ b/docs/20-editor-basics.mdx
@@ -2,9 +2,8 @@
 
 ## Camera Controls
 The camera has two modes `Fly` and `Orbit`. 
-`Fly Mode` allows for free control of the camera. 
-`Orbit Mode` focuses and rotates the camera around one point. 
-
+* `Fly Mode` allows for free control of the camera. 
+* `Orbit Mode` focuses and rotates the camera around one point. 
 Use the mouse buttons, mouse wheel and `WASD` to control the camera. Press `Shift` to move faster. 
 The tools panel has a `Reset Position` button to reset the camera.
 
