--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -5,21 +5,7 @@ id: vec3
 `Client`
 `Server`
 
-Representation of 3D vectors and points.
-
-This structure is used throughout Atomontage to pass 3D positions and directions around. It also contains functions for doing common vector operations.
-
-:::tip My tip
-
-Wwo!!
-
-:::
-
-:::danger Take care
-
-This action is dangerous
-
-:::
+3D vectors and points.
 
 ## Constructors
 
